[tool.poetry]
name = "lasx"
version = "0.1.0"
description = ""
authors = ["Rafael Sanabria <rafael.d.sanabria@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
fastapi = {extras = ["all"], version = "^0.70.0"}
SQLAlchemy = "^1.4.27"
uvicorn = "^0.15.0"
psycopg2 = "^2.9.2"
passlib = "^1.7.4"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
